--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
     "ampersand-state": "^4.4.5",
     "brace": "^0.5.0",
     "d3": "^3.5.5",
-    "deval": "^0.1.1",
+    "lodash.debounce": "^3.0.3",
     "react": "^0.13.1",
-    "react-backbone-events-mixin": "^0.1.1",
-    "weevil": "^0.1.2"
+    "react-backbone-events-mixin": "^0.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^5.1.0",
     "brfs": "^1.4.0",
+    "glob-cli": "^1.0.0",
     "reactify": "^1.1.0"
   }
 }
