--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "animation for data structure",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "watchify -o bundle.js -v -d src/app.js"
   },
   "repository": {
     "type": "git",
@@ -22,19 +23,23 @@
   },
   "homepage": "https://github.com/dagnaf/data-structure-animation",
   "dependencies": {
-    "ampersand-collection": "^1.4.4",
-    "ampersand-router": "^2.0.0",
-    "ampersand-state": "^4.4.5",
     "brace": "^0.5.0",
     "d3": "^3.5.5",
+    "flux": "^2.0.1",
+    "keymirror": "^0.1.1",
     "lodash.debounce": "^3.0.3",
-    "react": "^0.13.1",
-    "react-backbone-events-mixin": "^0.1.1"
+    "react": "^0.13.1"
   },
   "devDependencies": {
     "autoprefixer": "^5.1.0",
     "brfs": "^1.4.0",
-    "glob-cli": "^1.0.0",
-    "reactify": "^1.1.0"
+    "reactify": "^1.1.0",
+    "watchify": "^3.1.0"
+  },
+  "browserify": {
+    "transform": [
+      "reactify",
+      "brfs"
+    ]
   }
 }
