--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,12 @@ build/Release
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
 
-#dev
-
+# dist
 bundle.js
 bundle.css
+
+# c program
+src/codes/*/a.out
+
+# post procession
+src/codes/*/lined.js
