--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/dagnaf/data-structure-animation",
   "dependencies": {
     "brace": "^0.5.0",
+    "clone": "^1.0.2",
     "d3": "^3.5.5",
     "flux": "^2.0.1",
     "keymirror": "^0.1.1",
