--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "brace": "^0.5.0",
     "clone": "^1.0.2",
     "d3": "^3.5.5",
+    "d3-transform": "^1.0.3",
     "flux": "^2.0.1",
     "keymirror": "^0.1.1",
     "lodash.debounce": "^3.0.3",
