--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "watchify -o bundle.js -v -d src/app.js"
+    "start": "webpack-dev-server --progress --color",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -30,19 +31,19 @@
     "flux": "^2.0.1",
     "keymirror": "^0.1.1",
     "lodash.debounce": "^3.0.3",
+    "object-assign": "^2.0.0",
+    "raw-loader": "^0.5.1",
     "react": "^0.13.1",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "autoprefixer": "^5.1.0",
-    "brfs": "^1.4.0",
+    "css-loader": "^0.10.1",
+    "fs-sync": "^0.2.5",
+    "fs.extra": "^1.3.2",
+    "jsx-loader": "^0.13.1",
+    "less": "^2.5.0",
+    "less-loader": "^2.2.0",
     "reactify": "^1.1.0",
-    "watchify": "^3.1.0"
-  },
-  "browserify": {
-    "transform": [
-      "reactify",
-      "brfs"
-    ]
+    "style-loader": "^0.10.2"
   }
 }
