--- a/example/bower.json
+++ b/example/bower.json
@@ -12,5 +12,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "react": "~0.13.2",
+    "d3": "~3.5.5"
+  }
 }
