graph-painter fin

--- a/src/dsa/graph/Makefile
+++ b/src/dsa/graph/Makefile
@@ -1,7 +1,7 @@
 CC=gcc
 CFLAGS=-c -Wall
 LDFLAGS=
-SOURCES=main.c sparse-matrix.c sparse-matrix.h
+SOURCES=test.c ../common/util.c ../common/util.h
 OBJECTS=$(SOURCES:.c=.o)
 EXECUTABLE=a.out
 
@@ -10,7 +10,7 @@ all: $(SOURCES) $(EXECUTABLE)
 $(EXECUTABLE): $(OBJECTS)
 	$(CC) $(LDFLAGS) $(OBJECTS) -o $@
 
-.c.o:
+.cpp.o:
 	$(CC) $(CFLAGS) $< -o $@
 
 clean:
