graph bfs,dfs,topo,scc

--- a/src/dsa/mst/Makefile
+++ b/src/dsa/mst/Makefile
@@ -1,7 +1,7 @@
 CC=gcc
 CFLAGS=-c -Wall
 LDFLAGS=
-SOURCES=test.c ../common/util.c ../common/util.h
+SOURCES=test.c ../common/util.c ../common/util.h ../graph/graph.c ../graph/graph.h ../min-heap/min-heap.c ../min-heap/min-heap.h ./mst.c ./mst.h
 OBJECTS=$(SOURCES:.c=.o)
 EXECUTABLE=a.out
 
